fixing whitespace for small screens

--- a/src/apps/content-editor/src/app/components/Nav/ContentNav.less
+++ b/src/apps/content-editor/src/app/components/Nav/ContentNav.less
@@ -30,7 +30,11 @@
   overflow-x: hidden;
   background: transparent;
   padding: 0;
-  white-space: nowrap;
+  white-space: normal;
+
+  &.NavWrapClosed {
+    white-space: nowrap;
+  }
 
   .NavTitle {
     padding: 8px 16px;
